# jello

./: .gitignore  LICENSE  README.md  disk-embedding.py  formulas.py  integrator.py  jet_numbers.py  pyproject.toml
data/flamms-paraboloid-with-gravity.00/: initial_body_configuration.vtu  log.txt  solution.01.vtu  solution.02.vtu  solution.03.vtu  surface.vtp
data/funnel-with-gravity.00/: initial_body_configuration.vtu  solution.01.vtu  solution.02.vtu  solution.03.vtu  surface.vtp
data/paraboloid-upward-with-gravity.00/: initial_body_configuration.vtu  log.txt  solution.01.vtu  solution.02.vtu  solution.03.vtu  surface.vtp
data/spherical-cup-with-gravity.00/: initial_body_configuration.vtu  log.txt  solution.01.vtu  solution.02.vtu  solution.03.vtu  surface.vtp
jello/: __main__.py  body.py  disk.py  fem1d.py  fem2d.py  j1.py  j1_basis_plot.py  j1_from_function.py  j1_otimes_j1.py  j1_otimes_j1_from_function.py  linalg.py  material.py  measure.py  optimize.py  phi1d.py  phi2d.py  plot.py  solve.py  spatial_manifold.py  sym.py  test.py
